...
                    .font(.headline)
                    .foregroundColor(asset.isFlaggedForDeletion ? .secondary : .primary)
                    .frame(width: 85, alignment: .leading)

                TextField("", text: $displayFileName)
                    .textFieldStyle(RoundedBorderTextFieldStyle())
                    .accessibilityIdentifier("renameTextField")
                    .disabled(asset.isFlaggedForDeletion)
                    .onSubmit {
                        asset.newFileName = displayFileName
                        saveContext()
                    }
                    // We remove the onChange here to avoid saving on every keystroke
...
                    .font(.headline)
                    .foregroundColor(asset.isFlaggedForDeletion ? .secondary : .primary)
                    .frame(width: 85, alignment: .leading)

                TextField("", text: $keywords)
                    .textFieldStyle(RoundedBorderTextFieldStyle())
                    .accessibilityIdentifier("keywordsTextField")
                    .disabled(asset.isFlaggedForDeletion)
                    .onSubmit {
                        asset.keywords = keywords
                        saveContext()
                    }
            }
...
